<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.AdicionaComandaProdutoActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/produto"
        android:textSize="22sp"
        android:textColor="#333"
        />

    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="26dp"
        android:id="@+id/spinnerProduto"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/quantidade"
            android:textSize="22sp"
            android:textColor="#333"
            />
    </LinearLayout>
    <NumberPicker
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/npQuantidade"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="Enviar"
        android:background="@color/colorlima"
        android:textColor="#fff"
        android:id="@+id/btnEnviar"
        android:layout_margin="5dp"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:text="@string/gerenciar_produto"
        android:background="@color/colororange"
        android:textColor="#fff"
        android:id="@+id/btnGericiaProduto"
        android:layout_margin="5dp"
        />

    <ImageSwitcher
        android:id="@+id/ImageSwitcher01"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/festfood"></ImageSwitcher>

</LinearLayout>